--- a/src/css/section6.css
+++ b/src/css/section6.css
@@ -10,7 +10,8 @@
   font-size: 1.3rem;
 }
 .section6 .gird {
-  width: 100%;
+  min-width: 0;
+  max-width: 1618px;
   display: grid;
   margin: 50px auto 0;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
